
[TestSlogEntryAttrs/minimal_entry - 1]
{
 "authorization": {
  "authorized": false
 },
 "level": "AUDIT",
 "msg": "audit_event",
 "request": {
  "method": "",
  "path": "",
  "sourceIP": "",
  "status": 0,
  "userAgent": ""
 }
}
---

[TestSlogEntryAttrs/unauthorized_request_with_error - 1]
{
 "authorization": {
  "authorized": false
 },
 "error": "access denied",
 "level": "AUDIT",
 "msg": "audit_event",
 "request": {
  "method": "POST",
  "path": "/token",
  "sourceIP": "",
  "status": 0,
  "userAgent": ""
 }
}
---

[TestSlogEntryAttrs/with_pipeline_details - 1]
{
 "authorization": {
  "authorized": false
 },
 "level": "AUDIT",
 "msg": "audit_event",
 "pipeline": {
  "buildBranch": "main",
  "buildNumber": 42,
  "jobID": "job-123",
  "organizationSlug": "acme",
  "pipelineSlug": "main-pipeline"
 },
 "request": {
  "method": "",
  "path": "",
  "sourceIP": "",
  "status": 0,
  "userAgent": ""
 }
}
---

[TestSlogEntryAttrs/pipeline_group_elided_when_empty - 1]
{
 "authorization": {
  "authorized": false
 },
 "level": "AUDIT",
 "msg": "audit_event",
 "request": {
  "method": "GET",
  "path": "/healthcheck",
  "sourceIP": "",
  "status": 0,
  "userAgent": ""
 }
}
---

[TestSlogEntryAttrs/with_authorization_expiry - 1]
{
 "authorization": {
  "authorized": true,
  "expiry": "2030-01-01T00:00:00Z",
  "expiryRemaining": "<Any value>",
  "subject": "buildkite:org:acme"
 },
 "level": "AUDIT",
 "msg": "audit_event",
 "request": {
  "method": "",
  "path": "",
  "sourceIP": "",
  "status": 0,
  "userAgent": ""
 }
}
---

[TestSlogEntryAttrs/with_token_fields_no_expiry - 1]
{
 "authorization": {
  "authorized": false
 },
 "level": "AUDIT",
 "msg": "audit_event",
 "request": {
  "method": "",
  "path": "",
  "sourceIP": "",
  "status": 0,
  "userAgent": ""
 },
 "token": {
  "permissions": [
   "contents:read"
  ],
  "repositories": [
   "org/repo"
  ],
  "requestedProfile": "org/repo",
  "requestedRepository": "https://github.com/org/repo",
  "vendedRepository": "https://github.com/org/vended-repo"
 }
}
---

[TestSlogEntryAttrs/with_token_and_expiry - 1]
{
 "authorization": {
  "authorized": false
 },
 "level": "AUDIT",
 "msg": "audit_event",
 "request": {
  "method": "",
  "path": "",
  "sourceIP": "",
  "status": 0,
  "userAgent": ""
 },
 "token": {
  "expiry": "2030-01-01T00:00:00Z",
  "expiryRemaining": "<Any value>",
  "requestedRepository": "https://github.com/org/repo"
 }
}
---

[TestSlogEntryAttrs/with_claim_matches - 1]
{
 "authorization": {
  "authorized": false
 },
 "level": "AUDIT",
 "msg": "audit_event",
 "request": {
  "method": "",
  "path": "",
  "sourceIP": "",
  "status": 0,
  "userAgent": ""
 },
 "token": {
  "matches": [
   {
    "claim": "pipeline_slug",
    "value": "silk-prod"
   },
   {
    "claim": "build_branch",
    "value": "main"
   }
  ],
  "requestedRepository": "https://github.com/org/repo"
 }
}
---

[TestSlogEntryAttrs/with_claim_failures - 1]
{
 "authorization": {
  "authorized": false
 },
 "level": "AUDIT",
 "msg": "audit_event",
 "request": {
  "method": "",
  "path": "",
  "sourceIP": "",
  "status": 0,
  "userAgent": ""
 },
 "token": {
  "attemptedPatterns": [
   {
    "claim": "pipeline_slug",
    "pattern": ".*-release",
    "value": "silk-staging"
   }
  ],
  "requestedRepository": "https://github.com/org/repo"
 }
}
---

[TestSlogEntryAttrs/empty_matches_array_included - 1]
{
 "authorization": {
  "authorized": false
 },
 "level": "AUDIT",
 "msg": "audit_event",
 "request": {
  "method": "",
  "path": "",
  "sourceIP": "",
  "status": 0,
  "userAgent": ""
 },
 "token": {
  "matches": [],
  "requestedRepository": "https://github.com/org/repo"
 }
}
---

[TestSlogEntryAttrs/nil_matches_array_omitted - 1]
{
 "authorization": {
  "authorized": false
 },
 "level": "AUDIT",
 "msg": "audit_event",
 "request": {
  "method": "",
  "path": "",
  "sourceIP": "",
  "status": 0,
  "userAgent": ""
 },
 "token": {
  "requestedRepository": "https://github.com/org/repo"
 }
}
---

[TestSlogEntryAttrs/fully_populated - 1]
{
 "authorization": {
  "audience": [
   "https://buildkite.com"
  ],
  "authorized": true,
  "expiry": "2030-01-01T00:00:00Z",
  "expiryRemaining": "<Any value>",
  "issuer": "https://agent.buildkite.com",
  "subject": "buildkite:org:acme"
 },
 "error": "partial failure",
 "level": "AUDIT",
 "msg": "audit_event",
 "pipeline": {
  "buildBranch": "main",
  "buildNumber": 42,
  "jobID": "job-123",
  "organizationSlug": "acme",
  "pipelineSlug": "main-pipeline"
 },
 "request": {
  "method": "POST",
  "path": "/token",
  "sourceIP": "10.0.0.1",
  "status": 200,
  "userAgent": "test/1.0"
 },
 "token": {
  "attemptedPatterns": [
   {
    "claim": "build_branch",
    "pattern": "release-.*",
    "value": "main"
   }
  ],
  "expiry": "2030-01-01T00:00:00Z",
  "expiryRemaining": "<Any value>",
  "hashedToken": "47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=",
  "matches": [
   {
    "claim": "pipeline_slug",
    "value": "main-pipeline"
   }
  ],
  "permissions": [
   "contents:read"
  ],
  "repositories": [
   "org/repo"
  ],
  "requestedProfile": "org/repo",
  "requestedRepository": "https://github.com/org/repo",
  "vendedRepository": "https://github.com/org/vended-repo"
 }
}
---

[TestSlogEntryAttrs/hashed_token_present_when_set - 1]
{
 "authorization": {
  "authorized": false
 },
 "level": "AUDIT",
 "msg": "audit_event",
 "request": {
  "method": "",
  "path": "",
  "sourceIP": "",
  "status": 0,
  "userAgent": ""
 },
 "token": {
  "hashedToken": "47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=",
  "requestedRepository": "https://github.com/org/repo"
 }
}
---

[TestSlogEntryAttrs/hashed_token_absent_when_empty - 1]
{
 "authorization": {
  "authorized": false
 },
 "level": "AUDIT",
 "msg": "audit_event",
 "request": {
  "method": "",
  "path": "",
  "sourceIP": "",
  "status": 0,
  "userAgent": ""
 },
 "token": {
  "requestedRepository": "https://github.com/org/repo"
 }
}
---
